# web-to-podcast

./: .gitignore  CONTRIBUTING.md  LICENSE  Makefile  README.md  SECURITY.md  pyproject.toml  setup.py
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml
.github/workflows/: ci.yml
docs/: authenticated-sites.md  legal-and-safety.md  open-source-checklist.md  spec.md  vibevoice.md
examples/: hello_interview.yaml  js_rendered_site.yaml  local_markdown.json  protected_site.yaml  sample_article.md  url_list.yaml
scripts/: bootstrap.sh  publish_github.sh
src/web_to_podcast/: __init__.py  audio.py  cli.py  config.py  doctor.py  document.py  extract.py  package.py  pipeline.py  script.py  segments.py  sources.py  status.py  translate.py  tts.py  utils.py  vibevoice_engine.py  vibevoice_worker.py  voice_guard.py
tests/: test_pipeline_smoke.py
