[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "web-to-podcast"
version = "0.1.0"
description = "Crawl web resources, translate with local Gemma/Ollama, and render podcast audio with VibeVoice."
readme = "README.md"
requires-python = ">=3.9"
license = "MIT"
authors = [{ name = "Web to Podcast Contributors" }]
dependencies = [
  "PyYAML>=6.0",
]

[project.optional-dependencies]
tts = [
  "numpy>=1.24",
  "soundfile>=0.12",
  "torch>=2.2",
]
asr = [
  "openai-whisper>=20231117",
]
browser = [
  "playwright>=1.45",
]
dev = [
  "pytest>=8.0",
]

[project.scripts]
web-to-podcast = "web_to_podcast.cli:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
